--- a/app/src/main/res/layout/activity_edit_profile_page.xml
+++ b/app/src/main/res/layout/activity_edit_profile_page.xml
@@ -1,10 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#B7A1ABAC">
 
 
+    <EditText
+        android:id="@+id/edit_profile_last_name_edit_text"
+        android:layout_width="130dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
+        android:hint="last name"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/edit_profile_first_name_edit_text"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_image_image_view" />
 
+    <EditText
+        android:id="@+id/edit_profile_passport_edit_text"
+        android:layout_width="210dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center_vertical|end"
+        android:text=""
+        android:textColor="@color/gray2"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_phone_edit_text" />
+
+    <CheckedTextView
+        android:id="@+id/edit_profile_passport_check_text"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="7dp"
+        android:checked="true"
+        android:gravity="center_vertical"
+        android:text="passport num: "
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_phone_check_text" />
+
+    <EditText
+        android:id="@+id/edit_profile_phone_edit_text"
+        android:layout_width="220dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center_vertical|end"
+        android:text=""
+        android:textColor="@color/gray2"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_email_edit_text" />
+
+    <ImageButton
+        android:id="@+id/edit_profile_back_button"
+        android:layout_width="68dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="22dp"
+        android:background="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_media_rew" />
+
+
+    <EditText
+        android:id="@+id/edit_profile_first_name_edit_text"
+        android:layout_width="130dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
+        android:hint="first name"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_image_image_view" />
+
+    <ImageView
+        android:id="@+id/edit_profile_image_image_view"
+        android:layout_width="189dp"
+        android:layout_height="186dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="112dp"
+        android:background="#FFFFFF"
+        android:foreground="@android:drawable/ic_input_add"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <CheckedTextView
+        android:id="@+id/edit_profile_email_check_text"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="32dp"
+        android:checked="true"
+        android:gravity="center_vertical"
+        android:text="Email: "
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_first_name_edit_text" />
+
+    <CheckedTextView
+        android:id="@+id/edit_profile_phone_check_text"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="7dp"
+        android:checked="true"
+        android:gravity="center_vertical"
+        android:text="phone num:"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_email_check_text" />
+
+    <EditText
+        android:id="@+id/edit_profile_email_edit_text"
+        android:layout_width="240dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center_vertical|end"
+        android:text=""
+        android:textColor="@color/gray2"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_first_name_edit_text" />
+
+    <Button
+        android:id="@+id/edit_profile_save_button"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="105dp"
+        android:layout_marginBottom="51dp"
+        android:text="Save Changes"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/edit_profile_change_text_view"
+        android:layout_width="189dp"
+        android:layout_height="30dp"
+        android:gravity="center"
+        android:text="Change Photo"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/edit_profile_image_image_view"
+        app:layout_constraintEnd_toEndOf="@+id/edit_profile_image_image_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
