--- a/app/src/main/res/layout/shipment_item.xml
+++ b/app/src/main/res/layout/shipment_item.xml
@@ -1,176 +1,182 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- this layout is for the items we insert in the Adapter -->
-<androidx.cardview.widget.CardView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp">
+    android:layout_height="205dp">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/shipment_item_upper_part"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:background="@color/gray1">
+        android:layout_height="130dp"
+        android:background="#6F738A"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <!-- TODO Upper part of Shipment Item-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:id="@+id/shipment_item_upper_part">
+        <ImageView
+            android:id="@+id/shipment_item_arrow_image"
+            android:layout_width="40dp"
+            android:layout_height="10dp"
+            android:layout_marginTop="24dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher"
+            app:layout_constraintEnd_toStartOf="@+id/shipment_item_countery_to"
+            app:layout_constraintStart_toEndOf="@+id/shipment_item_countery_from"
+            app:layout_constraintTop_toBottomOf="@+id/shipment_item_name" />
 
-             <!-- 1) the left layout (img + txt)-->
-            <RelativeLayout
-                android:layout_width="70dp"
-                android:layout_height="70dp">
-                <ImageView
-                    android:id="@+id/shipment_item_product_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@mipmap/ic_launcher" />
+        <ImageView
+            android:id="@+id/shipment_item_product_image"
+            android:layout_width="110dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@mipmap/ic_launcher" />
 
-                <TextView
-                    android:id="@+id/shipment_item_product_weight"
-                    android:layout_width="match_parent"
-                    android:layout_height="15dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center_horizontal"
-                    android:textColor="@android:color/black"
-                    android:textSize="12sp"
-                    android:textStyle="italic"
-                    tools:text="50 Kg"
-                    android:background="@android:color/darker_gray" />
-            </RelativeLayout>
+        <TextView
+            android:id="@+id/shipment_item_product_weight"
+            android:layout_width="110sp"
+            android:layout_height="20dp"
+            android:background="#90A19B9B"
+            android:gravity="center_horizontal"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"
+            android:textStyle="italic|bold"
+            app:layout_constraintBottom_toBottomOf="@+id/shipment_item_product_image"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="50 Kg" />
 
-            <!--  2) the right layout -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_toRightOf="@+id/product_image"
-                android:paddingLeft="16dp">
+        <TextView
+            android:id="@+id/shipment_item_reward"
+            android:layout_width="110dp"
+            android:layout_height="30dp"
+            android:background="#FF0"
+            android:gravity="center"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="#000"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/shipment_item_product_image"
+            tools:text="$10.00" />
 
-                <TextView
-                    android:id="@+id/shipment_item_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:textColor="@android:color/white"
-                    android:textSize="15dp"
-                    tools:text="Shipment name" />
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1.5"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/shipment_item_countery_from"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="25dp"
-                        android:textAppearance="?android:textAppearanceMedium"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold"
-                        android:textSize="18dp"
-                        tools:text="countery from" />
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginLeft="20dp"
-                        android:src="@mipmap/ic_launcher"
-                        />
-                    <TextView
-                        android:id="@+id/shipment_item_countery_to"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right|center_vertical"
-                        android:textAppearance="?android:textAppearanceMedium"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold"
-                        android:textSize="18dp"
-                        tools:text="countery to" />
-                </LinearLayout>
-                <TextView
-                    android:id="@+id/shipment_item_date"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:textColor="@android:color/white"
-                    android:textSize="15dp"
-                    tools:text="Shipment date" />
+        <TextView
+            android:id="@+id/shipment_item_name"
+            android:layout_width="280dp"
+            android:layout_height="34dp"
+            android:gravity="center"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textSize="17sp"
+            android:textStyle="bold|italic"
+            app:layout_constraintStart_toEndOf="@+id/shipment_item_product_image"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Shipment name" />
 
-            </LinearLayout>
-        </LinearLayout>
-
-        <!-- TODO LowerPart of Shipment Item-->
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/shipment_item_countery_from"
+            android:layout_width="120dp"
             android:layout_height="50dp"
-            android:layout_below="@+id/shipment_item_upper_part"
-            android:background="@color/gray2">
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/shipment_item_product_image"
+            app:layout_constraintTop_toBottomOf="@+id/shipment_item_name"
+            tools:text="countery from" />
 
-            <!-- 1) left lower part (txt)-->
-            <TextView
-                android:id="@+id/shipment_item_reward"
-                android:layout_width="70dp"
-                android:layout_height="50dp"
-                android:paddingLeft="7dp" android:paddingTop="10dp"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:background="#FF0"
-                android:textColor="#000"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                tools:text="reward $10.00" />
+        <TextView
+            android:id="@+id/shipment_item_countery_to"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/shipment_item_arrow_image"
+            app:layout_constraintTop_toBottomOf="@+id/shipment_item_name"
+            tools:text="countery to" />
 
-            <!-- 2) mid lower part (img + txt + rating bar)-->
-            <ImageView
-                android:id="@+id/shipment_item_profile_img"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:src="@drawable/ic_launcher_background"
-                android:layout_toRightOf="@id/shipment_item_reward"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="10dp"/>
-            <TextView
-                android:id="@+id/shipment_item_profile_name"
-                android:layout_width="110dp"
-                android:layout_height="21dp"
-                android:layout_marginLeft="7dp" android:layout_marginTop="8dp"
-                android:layout_toRightOf="@+id/shipment_item_profile_img"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:textColor="@android:color/white"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                tools:text="Mayer Emad" />
-            <RatingBar
-                android:id="@+id/shipment_item_rating_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="15dp"
-                style="?android:attr/ratingBarStyleSmall"
-                android:layout_below="@+id/shipment_item_profile_name"
-                android:layout_toRightOf="@+id/shipment_item_profile_img"
-                android:layout_marginLeft="7dp"
-                android:numStars="5"
-                android:rating="4.3"
-                android:stepSize="0.1" />
+        <TextView
+            android:id="@+id/shipment_item_date"
+            android:layout_width="280dp"
+            android:layout_height="34dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center_vertical"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textSize="17sp"
+            app:layout_constraintStart_toEndOf="@+id/shipment_item_product_image"
+            app:layout_constraintTop_toBottomOf="@+id/shipment_item_countery_from"
+            tools:text="Shipment date" />
 
-            <!-- 3) right lower part (btn)-->
-            <Button
-                android:id="@+id/shipment_item_request_btn"
-                android:layout_width="120dp"
-                android:layout_height="35dp"
-                android:text="send request ?"
-                android:textSize="11sp" android:textStyle="italic"
-                android:layout_marginLeft="7dp" android:layout_marginTop="8dp"
-                android:background="#FF0"
-                android:layout_toRightOf="@id/shipment_item_profile_name"
-                />
-        </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </RelativeLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="#577898"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/shipment_item_upper_part">
 
-</androidx.cardview.widget.CardView>
+        <ImageView
+            android:id="@+id/shipment_item_profile_img"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="64dp"
+            android:layout_marginTop="11dp"
+            android:src="@drawable/ic_launcher_background"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <RatingBar
+            android:id="@+id/shipment_item_rating_bar"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="15dp"
+            android:layout_below="@+id/shipment_item_profile_name"
+            android:layout_marginStart="5dp"
+            android:layout_toRightOf="@+id/shipment_item_profile_img"
+            android:numStars="5"
+            android:rating="4.3"
+            android:stepSize="0.1"
+            app:layout_constraintStart_toEndOf="@+id/shipment_item_profile_img"
+            app:layout_constraintTop_toBottomOf="@+id/shipment_item_profile_name" />
+
+        <TextView
+            android:id="@+id/shipment_item_profile_name"
+            android:layout_width="110dp"
+            android:layout_height="21dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="15dp"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/shipment_item_profile_img"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Mayer Emad" />
+
+        <Button
+            android:id="@+id/shipment_item_request_btn"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="35dp"
+            android:background="#FF0"
+            android:text="send request ?"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
